; ModuleID = '/home/carl/AnghaBench/sway/sway/extr_main.c_log_kernel.c'
source_filename = "/home/carl/AnghaBench/sway/sway/extr_main.c_log_kernel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"uname -a\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@SWAY_INFO = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [35 x i8] c"Unable to determine kernel version\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @log_kernel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @log_kernel() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* @popen(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %2, i32** %1, align 8
  %3 = load i32*, i32** %1, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %8, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @SWAY_INFO, align 4
  %7 = call i32 @sway_log(i32 %6, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0))
  br label %13

8:                                                ; preds = %0
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @log_file(i32* %9)
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @pclose(i32* %11)
  br label %13

13:                                               ; preds = %8, %5
  ret void
}

declare dso_local i32* @popen(i8*, i8*) #1

declare dso_local i32 @sway_log(i32, i8*) #1

declare dso_local i32 @log_file(i32*) #1

declare dso_local i32 @pclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
